--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.19.4",
+    "@heroui/button": "^2.2.19",
+    "@heroui/card": "^2.2.18",
+    "@heroui/divider": "^2.2.13",
+    "@heroui/input": "^2.4.19",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
